# topography-searcher

./: .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  common_citations.md  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: automated-testing.yml  documentation.yml  python-app.yml
docs/: genindex.html  installation.html  py-modindex.html  tutorials.html
docs/source/: conf.py  index.rst  index.srt  installation.rst
examples/: README.md
examples/landscape-17/: analyse_landscape.py  plotting.ipynb  run_aimnet_ase.py  run_allegro_ase_par64.py  run_ani.py  run_example_cheatsheet.sh  run_mace_ase_par.py  run_nequip_ase_par64.py
examples/notebooks/: README.md  atomic_cluster.ipynb  bayesian_optimisation.ipynb  dataset_roughness.ipynb  example_function.ipynb
examples/scripts/: README.md
joss_submission/: paper.bib  paper.md
tests/: pytest.ini
tests/analysis/: test_batch_selection.py  test_graph_properties.py  test_minima_properties.py  test_pair_selection.py  test_roughness.py
tests/data/: benzene.xyz  coordsangle2.xyz  coordscompress.xyz  coordsdihedral.xyz  coordsexpanded.xyz  coordsmultiangle.xyz  cyclopentane.xyz  test_coordinates.py  test_kinetic_transition_network.py  test_model_data.py  ts.coords.combine  ts.data.combine
tests/generation/: test_generate_data.py
tests/global_optimisation/: test_basin_hopping.py  test_perturbations.py
tests/htmlcov/: d_1093e3b6c343454c___init___py.html  d_1093e3b6c343454c_disconnectivity_py.html  d_1093e3b6c343454c_network_py.html  d_1093e3b6c343454c_stationary_points_py.html  d_6b32bfbacd4ddf55___init___py.html  d_6b32bfbacd4ddf55_atomic_py.html  d_6b32bfbacd4ddf55_bayesian_optimisation_py.html  d_6b32bfbacd4ddf55_dataset_fitting_py.html  d_6b32bfbacd4ddf55_dft_py.html  d_6b32bfbacd4ddf55_force_fields_py.html  (+31 more)
(+992 files in other folders)
